# blake2s_example

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: challenge.h  key.h
src/: main.c
